remove full text search, add meilisearch
