# docs/swagger.yaml
@@ -110,8 +110,6 @@ definitions:
         type: integer
       title:
         type: string
-      transcript:
-        type: string
       uuid:
         type: string
       viewcount:
@@ -845,10 +843,43 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: The text to search in transcript
+      - description: The uuid of a vod
         in: query
-        name: q
-        required: true
+        name: uuid
+        type: string
+      - description: The title of a vod
+        in: query
+        name: title
+        type: string
+      - description: The duration of a vod
+        in: query
+        name: duration
+        type: integer
+      - description: The date of a vod
+        in: query
+        name: date
+        type: string
+      - description: The filename of a vod
+        in: query
+        name: filename
+        type: string
+      - description: The resolution of a vod
+        in: query
+        name: resolution
+        type: string
+      - description: The fps of a vod
+        in: query
+        name: fps
+        type: integer
+      - description: The size of a vod
+        in: query
+        name: size
+        type: integer
+      - description: 'Set order direction divided by comma. Possible ordering values:
+          ''date'', ''duration'', ''size''. Possible directions: ''asc'', ''desc''.
+          Example: ''date,desc'''
+        in: query
+        name: order
         type: string
       produces:
       - application/json
@@ -859,11 +890,15 @@ paths:
             items:
               $ref: '#/definitions/models.Vod'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            type: string
         "404":
           description: Not Found
           schema:
             type: string
-      summary: Get all vods by full text search
+      summary: Get all vods
       tags:
       - Vods
     post:
